new optimizations to email and images

--- a/faq.html
+++ b/faq.html
@@ -43,9 +43,9 @@
         <div class="notice-text">
           If you have any other general questions, please email
           <a
-            href="mailto:cjsnashvillehot@gmail.com?subject=Order Inquiry"
+            href="mailto:cbj@cjsnashvillehot.com?subject=Order Inquiry"
             class="white-link"
-            >cjsnashvillehot@gmail.com</a
+            >cbj@cjsnashvillehot.com</a
           >
         </div>
       </div>
@@ -82,7 +82,7 @@
               >FAQ</a
             >
             <a
-              href="mailto:cjsnashvillehot@gmail.com?subject=Order Inquiry"
+              href="mailto:cbj@cjsnashvillehot.com?subject=Order Inquiry"
               class="nav-link w-nav-link"
               >Contact</a
             >
@@ -174,8 +174,8 @@
                       We require at least
                       <span class="brand-span-sec">48 hours</span> advance
                       notice for orders, and we suggest additional lead time for
-                      orders large parties. We highly recommend booking sooner
-                      than later as we cannot always guarantee availability.
+                      larger parties. We highly recommend booking sooner than
+                      later as we cannot always guarantee availability.
                     </p>
                   </div>
                 </div>
@@ -202,7 +202,7 @@
                   </a>
                   <div class="faq-content">
                     <p class="faq-paragraph">
-                      Our chicken is fried in peanut oil; however, we can
+                      Our chicken is fried in peanut oil. However, we can
                       substitute vegetable oil upon request. We cannot guarantee
                       that peanuts haven't been used at our vendor facilities.
                       An event coordinator can provide a full allergen list upon
@@ -253,7 +253,7 @@
                     <p class="faq-paragraph">
                       Orders for less than 20 people can be placed with an
                       individual store's manager with at least 48 hours notice.
-                      The restaurant accepts phone calls at 10 a.m., but in the
+                      The restaurant accepts phone calls at 10 A.M., but in the
                       wake of high call volume feel free to send an email.
                     </p>
                   </div>
@@ -271,8 +271,7 @@
                       and how far it is from the catering kitchen. There is a
                       $25 delivery fee for all deliveries within a 10-mile
                       radius. Locations exceeding 10 miles can be discussed with
-                      an event coordinator. If you are picking up there will not
-                      be any fees attached to the order.
+                      an event coordinator.
                     </p>
                   </div>
                 </div>
@@ -341,7 +340,7 @@
                       <a class="brand-span" href="https://www.eatloco.org/"
                         >EatLoco Farmer's Market</a
                       >
-                      in Ashburn, Va on Saturday’s.
+                      in Ashburn, Va on Saturdays.
                     </p>
                   </div>
                 </div>
@@ -353,7 +352,7 @@
                   <div class="faq-content">
                     <p class="faq-paragraph">
                       To place an order with us you can call ahead at (202)
-                      596-7335, or email cjsnashvillehot@gmail.com. If we don't
+                      596-7335, or email cbj@cjsnashvillehot.com. If we don't
                       return your email within 24 hours, please call.
                     </p>
                   </div>
@@ -377,15 +376,14 @@
             id="w-node-_67f7db32-28d2-9f37-8b84-a159dcc6da5e-dcc6da57"
             class="footer-column"
           >
-            <a
-              href="index"
-              aria-current="page"
-              class="footer-link w--current"
+            <a href="index" aria-current="page" class="footer-link w--current"
               >Home</a
             >
             <a href="order" class="footer-link">Order</a>
             <a href="faq" class="footer-link">FAQ</a>
-            <a href="mailto:cjsnashvillehot@gmail.com?subject=Order Inquiry" class="footer-link"
+            <a
+              href="mailto:cbj@cjsnashvillehot.com?subject=Order Inquiry"
+              class="footer-link"
               >Contact</a
             >
           </div>
@@ -413,7 +411,7 @@
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"
     ></script>
-    <script src="js/webflow.js" type="text/javascript"></script>
+    <script src="js/main.js" type="text/javascript"></script>
     <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   </body>
 </html>
