--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="banner-wrap">
         <div class="notice-text">
           We&#x27;re open and available for pickup &amp; delivery.
-          <a href="menu.html" class="white-link">Order Now</a>
+          <a href="menu" class="white-link">Order Now</a>
         </div>
       </div>
     </div>
@@ -74,7 +74,7 @@
       <div class="navigation-container sticky">
         <div class="navigation-left">
           <a
-            href="index.html"
+            href="index"
             aria-current="page"
             class="brand w-nav-brand w--current"
             ><img src="images/Logo.png" width="80" alt=""
@@ -86,16 +86,16 @@
           </div>
           <nav role="navigation" class="nav-menu w-nav-menu">
             <a
-              href="index.html"
+              href="index"
               aria-current="page"
               class="nav-link w-nav-link w--current"
               >Home</a
             >
-            <a href="menu.html" class="nav-link w-nav-link">Order</a>
-            <a href="about.html" class="nav-link w-nav-link">About</a>
-            <a href="faq.html" class="nav-link w-nav-link">FAQ</a>
+            <a href="menu" class="nav-link w-nav-link">Menu</a>
+            <a href="about" class="nav-link w-nav-link">About</a>
+            <a href="faq" class="nav-link w-nav-link">FAQ</a>
             <a
-              href="mailto:cjsnashvillehot@gmail.com?subject=Order Inquiry"
+              href="mailto:cbj@cjsnashvillehot.com?subject=Order Inquiry"
               class="nav-link w-nav-link"
               >Contact</a
             >
@@ -152,7 +152,7 @@
             "
             class="button-wrapper"
           >
-            <a href="menu.html" class="button w-button">View Menu</a>
+            <a href="menu" class="button w-button">View Menu</a>
           </div>
         </div>
       </div>
@@ -171,18 +171,15 @@
               Now, we at CJ's Nashville Hot Chicken are happpy to share the joy
               of Nashville with you.
             </p>
-            <a href="about.html" class="button button-space w-button"
+            <a href="about" class="button button-space w-button"
               >Learn more</a
             >
           </div>
           <div class="image-block">
             <img
-              src="images/nashville-logo.png"
+              src="images/Logo.png"
               sizes="(max-width: 556px) 94vw, 523px"
-              srcset="
-                images/nashville-logo.png 500w,
-                images/nashville-logo.png 523w
-              "
+              srcset="images/Logo.png 500w, images/Logo.png 523w"
               alt=""
             />
           </div>
@@ -240,8 +237,8 @@
         <div class="title-wrap-centre">
           <h2>Browse our menu</h2>
           <p>
-            Use our menu to place an order through our contact page, or
-            give us a call to place your order.
+            Use our menu to place an order through our contact page, or give us
+            a call to place your order.
           </p>
         </div>
         <div
@@ -346,7 +343,7 @@
           "
           class="button-wrapper"
         >
-          <a href="menu.html" class="button w-button">See Full Menu</a>
+          <a href="menu" class="button w-button">See Full Menu</a>
         </div>
       </div>
     </div>
@@ -362,17 +359,20 @@
                 images/food-image.jpg  800w,
                 images/food-image.jpg 2103w
               "
+              class="border-radius"
               alt=""
             />
           </div>
           <div class="content-block">
-            <h2>Place your order over the phone or through our contact page.</h2>
+            <h2>
+              Place your order over the phone or through our contact page.
+            </h2>
             <p>
               Allow us to be your one-stop shop for the best Nashville Hot
               chicken in town. Have questions? Head on over to our FAQ's page
               for assistance.
             </p>
-            <a href="faq.html" class="button button-space w-button"
+            <a href="faq" class="button button-space w-button"
               >See our FAQ</a
             >
           </div>
@@ -394,7 +394,7 @@
             >
           </div>
           <div class="image-block">
-            <img src="images/Food-Takeaway.png" alt="" />
+            <img src="images/nashville-logo.png" alt="" />
           </div>
         </div>
       </div>
@@ -413,14 +413,16 @@
             class="footer-column"
           >
             <a
-              href="index.html"
+              href="index"
               aria-current="page"
               class="footer-link w--current"
               >Home</a
             >
-            <a href="menu.html" class="footer-link">Order</a>
-            <a href="faq.html" class="footer-link">FAQ</a>
-            <a href="mailto:cjsnashvillehot@gmail.com?subject=Order Inquiry" class="footer-link"
+            <a href="menu" class="footer-link">Order</a>
+            <a href="faq" class="footer-link">FAQ</a>
+            <a
+              href="mailto:cbj@cjsnashvillehot.com?subject=Order Inquiry"
+              class="footer-link"
               >Contact</a
             >
           </div>
@@ -448,7 +450,7 @@
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"
     ></script>
-    <script src="js/webflow.js" type="text/javascript"></script>
+    <script src="js/main.js" type="text/javascript"></script>
     <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   </body>
 </html>
