--- a/menu.html
+++ b/menu.html
@@ -83,7 +83,7 @@
             <a href="about" class="nav-link w-nav-link">About</a>
             <a href="faq" class="nav-link w-nav-link">FAQ</a>
             <a
-              href="mailto:cjsnashvillehot@gmail.com?subject=Order Inquiry"
+              href="mailto:cbj@cjsnashvillehot.com?subject=Order Inquiry"
               class="nav-link w-nav-link"
               >Contact</a
             >
@@ -215,6 +215,44 @@
                   Two chicken tenders served on white bread with bread and
                   butter pickles.
                 </p>
+                <div class="note-wrapper">
+                  <span class="note-span">Heat Levels:</span>
+                  <div>
+                    <p class="note-items">
+                      <span class="scov-bold">Bless Your Heart (Plain) - </span
+                      >For those who just can't take the heat.
+                    </p>
+                  </div>
+                  <div>
+                    <p class="note-items">
+                      <span class="scov-bold">The Belle (Mild) - </span>Just
+                      enough to make a lady glow.
+                    </p>
+                    <p class="brand-span">Scoville Rating: 30,000 - 50,000</p>
+                  </div>
+                  <div>
+                    <p class="note-items">
+                      <span class="scov-bold">The Hick (Medium) - </span>A bit
+                      more to make a man perspire.
+                    </p>
+                    <p class="brand-span">Scoville Rating: 50,000 - 100,000</p>
+                  </div>
+                  <div>
+                    <p class="note-items">
+                      <span class="scov-bold">The Redneck (Hot) - </span>This
+                      will make the horses sweat.
+                    </p>
+                    <p class="brand-span">Scoville Rating: 100,000 - 350,000</p>
+                  </div>
+                  <div>
+                    <p class="note-items">
+                      <span class="scov-bold">Whoopass (Very Hot) - </span>Open
+                      up a can of whoopass with cayenne, thai chili and
+                      habanero.
+                    </p>
+                    <p class="brand-span">Scoville Rating: Unknown</p>
+                  </div>
+                </div>
               </div>
             </div>
             <div data-w-tab="Sides" class="w-tab-pane">
@@ -277,15 +315,14 @@
             id="w-node-_67f7db32-28d2-9f37-8b84-a159dcc6da5e-dcc6da57"
             class="footer-column"
           >
-            <a
-              href="index"
-              aria-current="page"
-              class="footer-link w--current"
+            <a href="index" aria-current="page" class="footer-link w--current"
               >Home</a
             >
             <a href="menu" class="footer-link">Order</a>
             <a href="faq" class="footer-link">FAQ</a>
-            <a href="mailto:cjsnashvillehot@gmail.com?subject=Inquiry" class="footer-link"
+            <a
+              href="mailto:cbj@cjsnashvillehot.com?subject=Inquiry"
+              class="footer-link"
               >Contact</a
             >
           </div>
@@ -313,7 +350,7 @@
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"
     ></script>
-    <script src="js/webflow.js" type="text/javascript"></script>
+    <script src="js/main.js" type="text/javascript"></script>
     <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   </body>
 </html>
