--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
             >
             <a href="faq" class="nav-link w-nav-link">FAQ</a>
             <a
-              href="mailto:cjsnashvillehot@gmail.com?subject=Order Inquiry"
+              href="mailto:cbj@cjsnashvillehot.com?subject=Order Inquiry"
               class="nav-link w-nav-link"
               >Contact</a
             >
@@ -175,7 +175,7 @@
             >
             <a href="menu" class="footer-link">Order</a>
             <a href="faq" class="footer-link">FAQ</a>
-            <a href="mailto:cjsnashvillehot@gmail.com?subject=Order Inquiry" class="footer-link"
+            <a href="mailto:cbj@cjsnashvillehot.com?subject=Order Inquiry" class="footer-link"
               >Contact</a
             >
           </div>
@@ -205,7 +205,7 @@
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"
     ></script>
-    <script src="js/webflow.js" type="text/javascript"></script>
+    <script src="js/main.js" type="text/javascript"></script>
     <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   </body>
 </html>
