updates to open graph meta data

--- a/menu.html
+++ b/menu.html
@@ -37,7 +37,10 @@
       property="og:description"
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="images/opengraph.png" />
+    <meta
+      property="og:image"
+      content="https://mrc7.s3.amazonaws.com/images/nashville/opengraph.png"
+    />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="1247" />
     <!-- Twitter -->
@@ -211,30 +214,31 @@
                   <span class="menu-item-price brand-span">$375.00</span>
                 </div>
                 <p class="menu-item-description">
-                  40 chicken tenders, 6 quarts of sides and choice of 20 goo-goo clusters
-                  or 20 moonpies (or 10 of each).
+                  40 chicken tenders, 6 quarts of sides and choice of 20 goo-goo
+                  clusters or 20 moonpies (or 10 of each).
                 </p>
                 <div class="menu-wrapper">
                   <p class="menu-items">Plan B</p>
                   <span class="menu-item-price brand-span">$675.00</span>
                 </div>
                 <p class="menu-item-description">
-                  80 chicken tenders, 12 quarts of sides and choice of 40 goo-goo clusters
-                  or 40 moonpies (or 20 of each).
+                  80 chicken tenders, 12 quarts of sides and choice of 40
+                  goo-goo clusters or 40 moonpies (or 20 of each).
                 </p>
                 <div class="menu-wrapper">
                   <p class="menu-items">Plan C</p>
                   <span class="menu-item-price brand-span">$995.00</span>
                 </div>
                 <p class="menu-item-description">
-                  120 chicken tenders, 18 quarts of sides and choice of 60 goo-goo clusters
-                  or 60 moonpies (or 30 of each).
+                  120 chicken tenders, 18 quarts of sides and choice of 60
+                  goo-goo clusters or 60 moonpies (or 30 of each).
                 </p>
                 <div class="note-wrapper">
                   <span class="note-span">Please Note:</span>
                   <p class="note-items">
                     We are happy to develop a custom plan to meet your needs.
                   </p>
+                  <!-- <p>All of our chicken is halal certified.</p> -->
                 </div>
               </div>
             </div>
