--- a/faq.html
+++ b/faq.html
@@ -37,7 +37,7 @@
       property="og:description"
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="images/opengraph.png" />
+    <meta property="og:image" content="https://mrc7.s3.amazonaws.com/images/nashville/opengraph.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="1247" />
     <!-- Twitter -->
