Added items to faq section

--- a/faq.html
+++ b/faq.html
@@ -382,6 +382,19 @@
                 </div>
                 <div class="faq-question-wrap">
                   <a href="#" class="faq-question-bar w-inline-block">
+                    <div class="question-title">
+                      Are we a Halal certified business?
+                    </div>
+                    <img src="images/Plus.svg" alt="" class="plus" />
+                  </a>
+                  <div class="faq-content">
+                    <p class="faq-paragraph">
+                      Yes, all of our food products are Halal certified.
+                    </p>
+                  </div>
+                </div>
+                <div class="faq-question-wrap">
+                  <a href="#" class="faq-question-bar w-inline-block">
                     <div class="question-title">How do you accept orders?</div>
                     <img src="images/Plus.svg" alt="" class="plus" />
                   </a>
