added social links to footer

--- a/menu.html
+++ b/menu.html
@@ -388,17 +388,26 @@
         </div>
         <div class="footer-legal">
           <div class="footer-detail-left">
-            <div class="legal">Copyright © 2023. All rights reserved.</div>
+            <div class="legal">
+              Copyright © 2023 CJ's Nashville Hot Chicken.
+            </div>
           </div>
           <div class="footer-detail-right">
             <div class="detail-right">
-              <p class="detail">CJ's Nashville Hot Chicken</p>
+              <!-- <p class="detail">CJ's Nashville Hot Chicken</p> -->
             </div>
-            <!-- <div class="social-icon-wrap">
-            <a href="#" class="social-link w-inline-block"><img src="https://uploads-ssl.webflow.com/5e360a99f4dd53fd793925af/5e362b9c121267b0fabbef18_social-instagram.svg" alt="" class="social-icon"></a>
-            <a href="#" class="social-link w-inline-block"><img src="https://uploads-ssl.webflow.com/5e360a99f4dd53fd793925af/5e362b9cf4dd53d8073a05cd_social-twitter.svg" alt="" class="social-icon"></a>
-            <a href="#" class="social-link w-inline-block"><img src="https://uploads-ssl.webflow.com/5e360a99f4dd53fd793925af/5e362b9c7c077b1740e27d28_social-youtube.svg" alt="" class="social-icon"></a>
-          </div> -->
+            <div class="social-icon-wrap">
+              <a
+                href="https://www.instagram.com/cjsnashvillehot/"
+                class="social-link w-inline-block"
+                ><img
+                  src="https://uploads-ssl.webflow.com/5e360a99f4dd53fd793925af/5e362b9c121267b0fabbef18_social-instagram.svg"
+                  alt="instagram icon"
+                  class="social-icon"
+              /></a>
+              <!-- <a href="#" class="social-link w-inline-block"><img src="https://uploads-ssl.webflow.com/5e360a99f4dd53fd793925af/5e362b9cf4dd53d8073a05cd_social-twitter.svg" alt="" class="social-icon"></a> -->
+              <!-- <a href="#" class="social-link w-inline-block"><img src="https://uploads-ssl.webflow.com/5e360a99f4dd53fd793925af/5e362b9c7c077b1740e27d28_social-youtube.svg" alt="" class="social-icon"></a> -->
+            </div>
           </div>
         </div>
       </div>
